<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:id="@+id/linear_order"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtOrderType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_bold"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/order_type"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDelivery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:background="@color/light_gray"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/delivery"
                android:textColor="@color/colorPrimaryDark" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPickUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPickUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:background="@color/light_gray"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/pickup"
                android:textColor="@color/colorPrimaryDark" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>
